# matadrs

./: .gitattributes  .gitignore  LICENSE  README.md  api.html  credit.html  features.html  genindex.html  getting_started.html  index.html  installation.html  matadrs.py  notes.md  objects.inv  py-modindex.html  pyproject.toml  run_matadrs.py  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build_docs.yaml  build_docs.yml
_modules/: index.html
_sources/: api.rst.txt  credit.rst.txt  features.rst.txt  index.rst.txt  installation.rst.txt
_sources/modules/: matadrs.grep.rst.txt  matadrs.reduction.rst.txt  matadrs.rst.txt  matadrs.utils.rst.txt
_sources/modules/grep/: get_gravity_data.rst.txt  getdata_ESO_archive.rst.txt
_sources/modules/mat_tools/: libAutoPipeline.rst.txt  mat_autoPipeline.rst.txt
_sources/modules/reduction/: average.rst.txt  calib_BCD2.rst.txt  calibrate.rst.txt  fluxcal.rst.txt  merge.rst.txt  reduce.rst.txt
_sources/modules/utils/: data_prep.rst.txt  options.rst.txt  robust.rst.txt  tools.rst.txt
data/: external_dependencies.toml
data/calibrator_databases/: calib_spec_db_supplement3.fits
data/catalogues/: supplementary_catalog_202207.fits
docs/source/: conf.py  examples.rst  getting_started.rst  index.rst  matadrs.grep.rst  matadrs.mat_tools.rst  matadrs.reduction.rst  matadrs.rst  matadrs.utils.rst  modules.rst
docs/source/examples/: execute_pipeline.rst  plotting.rst  readout.rst
docs/source/modules/: matadrs.mat_tools.rst  matadrs.utils.rst
docs/source/modules/grep/: query.rst  rework.rst
docs/source/modules/reduction/: avg_oifits.rst
docs/source/modules/utils/: plot.rst  readout.rst
examples/: download.py  execute_pipeline.py  plotting.py  readout.py
examples/medium/: execute_pipeline.py
examples/small/: execute_pipeline.py
libs/: average.py  calibration.py  fluxcal.py  libAutoPipeline.py  mat_autoPipeline.py  mat_reduce_all_drs.py  matadrs.py  merge.py  plot.py  readout.py  reduction.py  reduction.txt  robust.py  show_allred.py  utils.py
libs/mat_tools/: libAutoPipeline.py  mat_autoPipeline.py
libs/reduction/: average.py  calibrate.py  data_prep.py  matadrs.py  merge.py  plot.py  readout.py  reduce.py  utils.py
libs/utils/: data_prep.py  readout.py  tools.py  utils.py
matadrs/: __init__.py  matadrs.py
matadrs/data/calibrator_databases/: calib_spec_db_v10.fits  calib_spec_db_v10_supplement.fits  vBoekelDatabase.fits  vBoekelDatabase.fitsold
matadrs/grep/: get_gravity_data.py  getdata_ESO_archive.py  rework.py
matadrs/libs/mat_tools/: mat_autoPipeline.py
matadrs/libs/reduction/: avg_oifits.py  calibrate.py  fluxcal.py  merge.py  reduce.py
matadrs/libs/utils/: readout.py
matadrs/mat_tools/: calib_BCD2.py  libAutoPipeline.py  libPostTools.py  mat_autoPipeline.py  mat_show_atmo_param_v2.py  mat_show_oifits_pbe_ama_short.py
matadrs/reduction/: __init__.py  average.py  avg_oifits.py  calib_BCD2.py  calibrate.py  fluxcal.py  merge.py  reduce.py  robust.py
matadrs/utils/: data_prep.py  options.py  plot.py  query.py  readout.py  robust.py  tools.py
modules/: matadrs.grep.html  matadrs.html  matadrs.mat_tools.html  matadrs.reduction.html  matadrs.utils.html
modules/grep/: get_gravity_data.html  getdata_ESO_archive.html  query.html  rework.html
modules/mat_tools/: libAutoPipeline.html  mat_autoPipeline.html
modules/reduction/: average.html  avg_oifits.html  calib_BCD2.html  calibrate.html  fluxcal.html  merge.html  reduce.html
modules/utils/: data_prep.html  options.html  plot.html  readout.html  robust.html  tools.html
src/matadrs/: __init__.py  matadrs.py  merge.py  readout.py  utils.py
src/matadrs/data/: cflux_calib.sof  mat_target_list.csv  mat_target_list.xlsx
src/matadrs/data/calibrator_databases/: calib_spec_db_supplement3.fits
src/matadrs/data/catalogues/: jsdc_v2_catalog_20170303.fits  supplementary_catalog_202207.fits
src/matadrs/data/tests/: HD_163296_2019-03-23T08_41_19_L_TARGET_FINALCAL_INT.fits  HD_163296_2019-03-23T08_41_19_N_TARGET_FINALCAL_INT.fits  HD_163296_2019-05-06T08_19_51_L_TARGET_FINALCAL_INT.fits
src/matadrs/grep/: query.py
src/matadrs/libs/grep/: get_gravity_data.py  getdata_ESO_archive.py  rework.py
src/matadrs/libs/reduction/: __init__.py  average.py  avg_oifits.py  calib_BCD2.py  calibrate.py  merge.py  plot.py  readout.py  reduce.py
src/matadrs/libs/reduction/jacob_files/: bcd_calibration.py  cflux_calibration_lmband.py
src/matadrs/libs/utils/: readout.py  tools.py
src/matadrs/mat_tools/: libAutoPipeline.py  mat_autoPipeline.py
src/matadrs/reduction/: __init__.py  average.py  avg_oifits.py  calibrate.py  fluxcal.py  merge.py  reduce.py
src/matadrs/utils/: plot.py  readout.py  tools.py
