[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matadrs"
version = "0.1.0"
description = "An extended, fully automated MATISSE-data reduction pipeline"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["astronomy", "data-reduction", "interferometry"]
authors = [
	{name = "Marten Scheuck", email = "martenscheuck@gmail.com"}
]

classifiers = [
	"Development Status :: 1 - Planning",
	"Framework :: Pytest",
	"Framework :: Sphinx",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Topic :: Scientific/Engineering :: Astronomy",
	"Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
	'importlib-metadata; python_version<"3.8"',
	"astropy >=5.1",
    "pandas==1.5.2",
	"matplotlib >=3.5.3",
	"numpy >=1.23.2",
	"pip >=22.2.2",
	"scipy >=1.9.1",
	"tqdm >=4.64.0"
]

[project.urls]
repository = "https://github.com/MBSck/matadrs"
