[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matadrs"
dynamic = ["version"]
description = "An extended, fully automated MATISSE-data reduction pipeline"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["astronomy", "data-analysis", "data-reduction", "interferometry"]
authors = [
	{name = "Marten Scheuck", email = "martenscheuck@gmail.com"}
]

classifiers = [
	"Development Status :: 2 - Alpha",
	"Framework :: Pytest",
	"Framework :: Sphinx",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Topic :: Scientific/Engineering :: Astronomy",
	"Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "importlib-metadata; python_version < '3.8'",
  "astropy >= 5.1",
  "astroquery >= 0.4.6",
  "pandas >= 1.5.2",
  "matplotlib >= 3.5.3",
  "numpy >=1.23.2",
  "pip >=22.2.2",
  "scipy >=1.9.1",
  "tqdm >=4.64.0",
  "skycalc-cli>=1.4",
]

[options.extras_require]
dev = [
  "ipython",
  "pytest >= 7.2.1",
  "pytest-cov >= 4.0.0",
  "sphinx == 7.0.1",
  "sphinx-autobuild == 2021.3.14",
  "sphinx-autodoc-typehints == 1.23",
  "pydata-sphinx-theme==0.13.3",
  "numpydoc==1.5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "matadrs.__version__"}

[tool.setuptools.packages.find]
include = ["matadrs*"]

[project.urls]
repository = "https://github.com/MBSck/matadrs"
