[project]
name = "matadrs"
dynamic = ["version"]
description = "An extended, fully automated MATISSE-data reduction pipeline"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["astronomy", "data-analysis", "data-reduction", "interferometry"]
authors = [
	{name = "Marten Scheuck", email = "martenscheuck@gmail.com"}
]

classifiers = [
	"Development Status :: 2 - Alpha",
	"Framework :: Pytest",
	"Framework :: Sphinx",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Topic :: Scientific/Engineering :: Astronomy",
	"Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy>=5.3.2",
    "astroquery>=0.4.7",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pip>=24.2",
    "scipy>=1.13.1",
    "skycalc-cli>=1.4",
    "tqdm>=4.66.5",
]

[project.urls]
repository = "https://github.com/MBSck/matadrs"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "matadrs.__version__"}

[tool.setuptools.packages.find]
include = ["matadrs*"]

[tool.uv]
dev-dependencies = [
    "numpydoc>=1.5.0",
    "pydata-sphinx-theme>=0.13.3",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "sphinx>=7.0.1",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.0",
]

