[metadata]
name = matadrs
version = 0.1.0
author = Marten Scheuck
author_email = martenscheuck@gmail.com
description = An extended, fully automated MATISSE-data reduction pipeline
long_description = file: README.md, LICENSE
keywords = astronomy, data-reduction, interferometry
license = MIT
classifiers =
	Development Status :: 1 - Planning
	Framework :: Pytest
	Framework :: Sphinx
    Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics
url = https://github.com/MBSck/matadrs

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
	importlib-metadata; python_version<"3.8"
	astropy >=5.1
	matplotlib >=3.5.3
	numpy >=1.23.2
	pip >=22.2.2
	scipy >=1.9.1
	tqdm >=4.64.0

[options.package_data]
matadrs = data*

[options.packages.find]
exclude =
    tests*
    examples*
